--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,11 +3,15 @@ options:
 
 pipelines:
   default:
-    - step:
-        script:
-          - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
-          - docker build -t rossedlin/php-apache:7.4 .
-          - docker push rossedlin/php-apache:7.4
+
+    # Build Docker Image
+#    - step:
+#        script:
+#          - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
+#          - docker build -t rossedlin/php-apache:7.4 .
+#          - docker push rossedlin/php-apache:7.4
+
+    # Trigger Dev Pipeline
 #    - step:
 #        script:
 #          - pipe: atlassian/trigger-pipeline:5.0.0
@@ -16,6 +20,14 @@ pipelines:
 #              BITBUCKET_APP_PASSWORD: $BITBUCKET_APP_PASSWORD
 #              REPOSITORY: 'docker-php-apache'
 #              BRANCH: 'v7.4-dev'
+
+    # Deployment to Production
+    - step:
+        name: 'Deployment to Production'
+        deployment: production
+        trigger: 'manual'
+        script:
+          - echo "Your deployment to production script goes here..."
 
         services:
           - docker
