--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -19,7 +19,8 @@ pipelines:
               BITBUCKET_USERNAME: $BITBUCKET_USERNAME
               BITBUCKET_APP_PASSWORD: $BITBUCKET_APP_PASSWORD
               REPOSITORY: 'docker-php-apache'
-              BRANCH: 'v7.4-dev'
+              REF_TYPE: 'branch'
+              REF_NAME: 'v7.4-dev'
 
     # Deployment to Production
     - step:
@@ -31,18 +32,3 @@ pipelines:
 
         services:
           - docker
-
-  custom: # Pipelines that can only be triggered manually
-    sonar:
-      - step:
-          script:
-            - echo "Manual triggers for Sonar are awesome!"
-    deployment-to-prod:
-      - step:
-          script:
-            - echo "Manual triggers for deployments are awesome!"
-  branches:  # Pipelines that run automatically on a commit to a branch can also be triggered manually
-    staging:
-      - step:
-          script:
-            - echo "Automated pipelines are cool too."
