--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,10 +3,23 @@ options:
 
 pipelines:
   default:
+
+    # Build Docker Image
     - step:
+        name: 'Build / Push Docker Image'
         script:
           - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
           - docker build -t rossedlin/php-apache:7.3 .
           - docker push rossedlin/php-apache:7.3
-        services:
-          - docker
+
+    # Trigger Dev Pipeline
+    - step:
+        name: 'Trigger Dev Pipeline'
+        script:
+          - pipe: atlassian/trigger-pipeline:5.0.0
+            variables:
+              BITBUCKET_USERNAME: $BITBUCKET_USERNAME
+              BITBUCKET_APP_PASSWORD: $BITBUCKET_APP_PASSWORD
+              REPOSITORY: 'docker-php-apache'
+              REF_TYPE: 'branch'
+              REF_NAME: 'v7.3-dev'
