--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@ version: '3.3'
 services:
   web:
    image: rossedlin/php-apache:8.0
-   env_file:
-     - .env
+   container_name: php-web
    ports:
      - "80:80"
    volumes:
