--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,8 @@ version: '3.3'
 services:
   web:
    image: rossedlin/php-apache:8.1
-   env_file:
-     - .env
-   ports:
-     - "80:80"
+   container_name: php-web
+#   ports:
+#     - "80:80"
    volumes:
      - ./:/var/www
