--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,7 +3,10 @@ options:
 
 pipelines:
   default:
+
+    # Build Docker Image
     - step:
+        name: 'Build / Push Docker Image'
         script:
           - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
           - docker build -t rossedlin/php-apache:5.4 .
