--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ jobs:
 
     - uses: actions/checkout@v3
     - name: Login to Docker
-      run: docker login -u ${{ vars.DOCKER_HUB_USER }} -p ${{ secrets.DOCKER_HUB_PASSWORD }}
+      run: docker login -u ${{ vars.DOCKER_HUB_USER }} --password-stdin ${{ secrets.DOCKER_HUB_PASSWORD }}
 
     - uses: actions/checkout@v3
     - name: Push Image to Docker
